# zillow_llm

./: .env  .gitignore  chain.py  classifier.py  const.py  dropbox_loader.py  extract_words.py  main.py  meanings.py  pyproject.toml  sampling.py  smt203util.py  text_preprocess.py
code/: 2. Keyword-Topic Comparison.ipynb  3. Word Embedding.ipynb  4. Text Embedding.ipynb  5. Llama Extract.ipynb  6. ML Prediction - Price.ipynb  6. ML Prediction - TOM.ipynb  7. LLM OLS.ipynb  8. LLM Classification (GPT).ipynb  8. LLM Classification.ipynb  dropbox_loader.py
code/dataset/: 2. zillow_cleaned.geojson
colab/: 3. Word Embedding.ipynb  5. Llama Extract.ipynb
dataset/raw/: 4. bert_pca.csv  5. stf_pca.csv  6. llama_extracted.h5
dataset/word_counts/: CH_0_group_0_counts.csv  CH_0_group_1_counts.csv  CH_0_group_2_counts.csv  CH_1_group_0_counts.csv  CH_1_group_1_counts.csv  CH_1_group_2_counts.csv  LA_0_group_0_counts.csv  LA_0_group_1_counts.csv  LA_0_group_2_counts.csv  LA_1_group_0_counts.csv  LA_1_group_1_counts.csv  LA_1_group_2_counts.csv  NY_0_group_0_counts.csv  NY_0_group_1_counts.csv  NY_0_group_2_counts.csv  NY_1_group_0_counts.csv  NY_1_group_1_counts.csv  NY_1_group_2_counts.csv
dataset/word_counts/0.05/: CH_0_group_0_zscore.csv  (+11 more)
result/: TOM Thresholds.txt  eval_0.05_results.txt  eval_0.15_results.txt  eval_0.1_results.txt  eval_0.25_results.txt  eval_0.2_results.txt  eval_0.3_results.txt  eval_results.txt  llm_0.05_result.csv  llm_0.15_result.csv  llm_0.1_result.csv  llm_0.25_result.csv  llm_0.2_result.csv  llm_0.3_result.csv  llm_result.csv
(+60 files in other folders)
