[project]
name = "zillow"
version = "0.1.0"
description = ""
authors = [
    {name = "Hyeongchan Bae",email = "83401838+Rlearnchan@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "langchain (>=0.3.18,<0.4.0)",
    "langchain-openai (>=0.3.4,<0.4.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.0,<7.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "num2words (>=0.5.14,<0.6.0)",
    "word2number (>=1.1,<2.0)",
    "xgboost (>=2.1.4,<3.0.0)",
    "lightgbm (>=4.5.0,<5.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "setuptools (>=75.8.0,<76.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
